[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Sprites/Items/items.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/usePrompt.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Interactables/Chest.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="Chest" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
sleeping = true
can_sleep = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 14
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="usePrompt" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -7.63827 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.0883884 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
